--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.12.15"
+    "mongoose": "^5.12.15",
+    "multer": "^1.4.2",
+    "path": "^0.12.7"
   }
 }
