--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "7.19.0"
   },
   "scripts": {
+    "start": "nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
