--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongodb-client-encryption": "^1.2.6",
     "mongoose": "^5.12.15",
     "multer": "^1.4.2",
     "path": "^0.12.7"
