--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb-client-encryption": "^1.2.6",
     "mongoose": "^5.12.15",
     "multer": "^1.4.2",
+    "nodemailer": "^6.7.3",
     "path": "^0.12.7"
   },
   "devDependencies": {
