--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "npm": "7.19.0"
   },
   "scripts": {
-    "start": "nodemon ./src/index.js",
+    "start": "node ./src/index.js",
+    "serve": "nodemon ./src/index.js",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
